try to fix the project container top alignment without breaking the map

--- a/src/features/projects/styles/ProjectDetails.module.scss
+++ b/src/features/projects/styles/ProjectDetails.module.scss
@@ -267,7 +267,7 @@
   }
 
   .projectContainer {
-    margin-top: 90px;
+    margin-top: 0px;
     width: 360px;
     padding-bottom: 16px;
     min-height: calc(100vh - 100px);
